--- a/Datos.html
+++ b/Datos.html
@@ -10,22 +10,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
     <style>
 
-        * {
+        *{
            background-color:black;
             font-family:'Kaushan Script',cursive;    
         }
 
-        h2 {
+        h2{
             background-color:orange;
             color:black;
         }
 
-        p {
+        p{
             color:orange;
             background-color:black;
         }
 
-        a {
+        a{
             color:orange;
         }
 
@@ -46,9 +46,10 @@
         Fechas de nacimiento:31/10/2003<br>
         Telefóno:655883498<br>
         Correo electrónico:alejandro.gallego.jimenez@fp.ifprescate.com<br>
-        Estudios:Grado Medio de Sistemas Microinformáticos y redes/Grado Superior Desarrollo de aplicaciones en multiplataforma
+        Estudios:Grado Medio de Sistemas Microinformáticos y redes/Grado Superior Desarrollo de aplicaciones en multiplataforma<br>
+        Idiomas:Español,Inglés,Francés
     </p>
-    <a href="index.html">Inicio</a>
+    <a href="index.html">Currículum Vitae</a>
     <img src="goku.jpg" class="foto">
 </body>
 </html>
