--- a/Formacion.html
+++ b/Formacion.html
@@ -9,22 +9,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
     <style>
-        * {
+        *{
             background-color:black;
             font-family:'Kaushan Script',cursive;    
             color:orange;
         }
 
-        h1 {
+        h1{
             background-color:orange;
             color:black;
         }
 
-        a {
+        a{
             color:orange;
         }
 
-        ol {
+        ol{
             color:orange;
         }
 
@@ -42,16 +42,17 @@
             <li>Grado Medio:Sistemas Microinformáticos y redes</li>
             <li>Grado Superior:Desarrollo de aplicaiones en multiplataforma</li>
         </ol>
-        <ol class="listas">
+        <ol type="I" class="listas">
         <li><progress max="100" value="60"></progress>Java</li>
+        <li><progress max="100" value="60"></progress>Python</li>
         <li><progress max="100" value="70"></progress>HTML</li>
-        <li><progress max="100" value="50"></progress>Python</li>
         <li><progress max="100" value="50"></progress>CSS</li>
         <li><progress max="100" value="75"></progress>Sistemas microinfromáticos</li>
         <li><progress max="100" value="65"></progress>Seguridad Informática</li>
         <li><progress max="100" value="50"></progress>Redes Locales</li>
+        <li><progress max="100" value="50"></progress>Base de datos</li>
         </ol>
-        <a href="index.html">Inicio</a>
+        <a href="index.html">Currículum Vitae</a>
 
 </body>
 </html>
