--- a/Trabajos.html
+++ b/Trabajos.html
@@ -15,12 +15,12 @@
             font-family:'Kaushan Script',cursive;      
           }
 
-        h1 {
+        h1{
             background-color:orange;
             color:black    
         }
 
-        a {
+        a{
             color:orange;
         }
 
@@ -35,10 +35,11 @@
     
         <h1>Trabajos</h1>
         <p>He trabajado en una empresa especializada,en Telecomunicaciones en la cuál he adquirido,mejorado conocimientos.<br>
-            También he adquirido práctica en la realización de antenas y repetidores de señal,montaje de servidores,<br>
-            manipulación de serviores.También con la instalación de un aerogenerador y su respectivo cableado. </p>
+            También he adquirido práctica en la realización de instalaciones antenas y repetidores de señal,montaje de servidores,<br>
+            manipulación de serviores.También con la instalación de un aerogenerador y su respectivo cableado.Instalación de seguridad<br>
+            compuesta por cámaras de seguridad y repetidores de la marca ubiquitu,instalación de antenas en torres de telecomunicaciones </p>
             <a href="https://jaenwifi.es/" target="_blank">Jaenwifi</a>
-            <a href="index.html">Inicio</a>
+            <a href="index.html">Currículum Vitae</a>
             <img src="descarga.jpg" style="padding: 1rem;">
 </body>
 </html>
