--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <header class="header">
         <h1>Alejandro Gallego Jiménez</h1>
+        <h3>Desarrollador de aplicaciones en multiplataforma</h3>
 
         
         <div>
@@ -23,10 +24,11 @@
        
    
     <nav class="nav">
-         <a class="nav a" href="#">Inicio</a>
+         <a class="nav a" href="#">Currículum Vitae</a>
          <a class="nav a" href="Datos.html" target="_blank">Datos personales</a>
          <a class="nav a" href="Trabajos.html" target="_blank">Trabajos</a>
          <a class="nav a" href="Formacion.html" target="_blank">Formación</a>
+         <a class="nav a" href="Idiomas.html" target="_blank">Idiomas</a>
     </nav>
 
     <div class="row">
@@ -39,8 +41,8 @@
     </aside>
         <section>
             <h2>Perfil Personal</h2>
-            <p>Hola,me llamo Alejandro,estoy dispuesto aprender y mejorar mis conocimientos informáticos<br> 
-                este es mi currículum aqui es donde se va a ver reflejado mis datos personales,formación,conocimientos e aptitudes.Empresas en los que he trabajado<br>,
+            <p>Hola,me llamo Alejandro,estoy dispuesto aprender y mejorar mis conocimientos informáticos  este es mi currículum<br> 
+                aqui es donde se va a ver reflejado mis datos personales,formación,conocimientos e aptitudes.Empresas en los que he trabajado<br>,
                 también podrán obtener información sobre mis aptitudes y conocimientos.También mi contacto por si quieren,
                 contactar conmigo</p>
         </section>
